--- a/stylesheetthanks.css
+++ b/stylesheetthanks.css
@@ -45,27 +45,28 @@ div.toplist div {	/* This style applies to the divs inside the top */
 
 
 .intro {
-  color: #353535; text-align: center
+  color: #353535; 
+  text-align: center
 }
 
 .red {
   color: crimson;
-  text-align: left;
+  text-align: center;
 }
 
 .purple {
   color: darkorchid;
-  text-align: left;
+  text-align: center;
 }
 
 .blue {
   color: #3571A3;
-  text-align: left;
+  text-align: center;
 }
 
 .green {
   color: #10AB10;
-  text-align: left;
+  text-align: center;
 }
 
 .container {
@@ -76,15 +77,6 @@ div.toplist div {	/* This style applies to the divs inside the top */
 .container > div {
   display: table-cell;
   vertical-align: middle;
-}
-#image {
-    height: 33em;
-    width: 25em;
-}
-
-img {
-  height: 12em;
-   width: 12em;
 }
 
 td > img {
@@ -106,11 +98,12 @@ body > ul > li {
 body {
   font-family: sans-serif;
   line-height: 130%;
+  
   background-color: #FFFAED;
   text-align: center;
 }
-h1, h2, h3, h4, h5, h6 {
-  color: #3571A3;
+h1 {
+  color: black;
 }
 ul > li {
   color: #353535;
